                       Configurator.java Change Log
                       ----------------------------

Opravy:

PropertySetter
- přejmenování - odstranění zkratky
- odstranění zkratky z názvu metody a parametru

Logging(trace)
- přidání {} kolem příkazu v if
- přejmenování: f -> format
                a -> args

ConfigurationException
- odstranění zkratek z názvu
- přejmenování: f -> format
                a -> args
                t -> throwable

AllDeclaredFieldsIterable
- změna názvu
- přejmenování: lc -> leafClass
                kl -> klass

ArrayIterator
- změna názvu
- změna názvu proměnných - odstranění zkratek

Formátování
- obalení každého bloku {}, konzistentní používání { na stejném řádku jako řídící struktura
- konzistentní použití mezer kolem operátorů, čárek
- odsazení kódu pouze pomocí tabů
- odstranění whitespace na koncích řádků

Configurator.set()
- přejmenování parametrů a lokálních proměnných
- vyjmutí vnořeného if

Všude
- odstranění zkratek z názvů tříd, funkcí a jejich parametrů

Configurator.getObjectFieldValue()
- nová funkce pro získání field hodnoty objektu

Configurator.getPropertyName()
- nová funkce pro získání jména property, případně jména fieldu, pokud property má prázdné jméno  

Configurator.check()
- přejmenování lokálních proměnných (ze zkratek)
- inicializace při deklaraci, deklarace blízko prvního použití
- použití getObjectFieldValue() a getPropertyName()
- sjednocení testu před nastavením defaultní hodnoty
- sjednocení testu na povinnou default hodnotu (zrušení else if () větve)
- doplnění throws anotace

Configurator.makeFieldPropertySetter()
- getPropertyName()
- inicializace proměnné classPropertyName;
- obrácení podmínky u (property == null) -> spolu s inicializací ušetří jednu else větev

TODO
- sjednocení pořadí parametrů u funkcí (target, name a naopak)
- přidat throws ExceptionClass za jednotlivé fce nebo @throws(classOf[Exception]) anotaci?
- doplnit komentáře k novým funkcím? (včetně javadocu)